--- a/package.json
+++ b/package.json
@@ -123,5 +123,8 @@
     "tslint-loader": "^3.5.4",
     "express": "^4.16.4",
     "body-parser": "^1.18.3"
+  },
+  "dependencies": {
+    "cookie-parser": "^1.4.5"
   }
 }
